@@ -4,11 +4,15 @@ Changes in dtrx
 Version 7.0
 -----------
 
+At this point, I consider dtrx to be mature software.  It's maybe a little
+too interactive, but otherwise it does everything I want, and it does it
+very well.  Expect new releases to be few and far between going forward.
+
 New features
 ~~~~~~~~~~~~
 
  * If any of dtrx's command line arguments are URLs, it will automatically
-   download them with wget -c in the current directory before extracting
+   download them with `wget -c` in the current directory before extracting
    them.  See the documentation for more information about this feature.
    Note that there might be trouble if there's already a file in the
    directory where wget would normally save the download.
